--- a/user.ejs
+++ b/user.ejs
@@ -1,102 +1,151 @@
 <!DOCTYPE html>
 <head>
-   <link rel="stylesheet" href="\css\default.css" type="text/css">
-   <script src="\\wsl.localhost\Ubuntu\home\alex9947\CSCE_315\315Project3-main\315Project3-main\public\js\index.js"></script>
+   <link rel="stylesheet" href="\css\server.css" type="text/css">
    <title>Server POS</title> 
 </head>
 <body>
    <script>
+      
       let ord = { base: "", protein: "", dressing: "", extra: "", price: 7.69};
 
       function grainBowl() { 
          ord.base = "Grain Bowl"; 
+         document.getElementById("base1").value = "Grain Bowl";
       } 
 
       function salad() { 
-         ord.base = "Salad"; 
+         ord.base = "Salad";
+         document.getElementById("base1").value = "Salad";
       } 
 
       function pita() { 
-         ord.base = "Pita"; 
+         ord.base = "Pita";
+         document.getElementById("base1").value = "Pita";
       } 
 
       function greens() { 
-         ord.base = "Greens & Grains"; 
+         ord.base = "Greens & Grains";
+         document.getElementById("base1").value = "Greens & Grains";
       } 
 
       function gyro() { 
          ord.protein = "Gyro"; 
+         document.getElementById("protein1").value = "Gyro";
       } 
 
       function falafel() { 
          ord.protein = "Falafel"; 
+         document.getElementById("protein1").value = "Falafel";
       } 
 
       function meatballs() { 
          ord.protein = "Meatballs"; 
+         document.getElementById("protein1").value = "Meatballs";
       } 
 
       function chicken() { 
-         ord.protein = "Chicken"; 
+         ord.protein = "Chicken";
+         document.getElementById("protein1").value = "Chicken";
       } 
 
       function vegmed() { 
          ord.protein = "Veg Medley"; 
+         document.getElementById("protein1").value = "Veg Medley";
       } 
 
       function hummus() {  
          ord.dressing = "Hummus"; 
+         document.getElementById("dressing1").value = "Hummus";
       } 
 
       function rphummus() {  
          ord.dressing = "Red Pepper Hummus"; 
+         document.getElementById("dressing1").value = "Red Pepper Hummus";
       } 
 
       function jalafeta() {  
          ord.dressing = "Jalapeno Feta"; 
+         document.getElementById("dressing1").value = "Jalapeno Feta";
       } 
 
       function tza() {  
          ord.dressing = "Tzatziki"; 
+         document.getElementById("dressing1").value = "Tzatziki";
       } 
 
       function grev() {  
          ord.dressing = "Green Vinaigrette"; 
+         document.getElementById("dressing1").value = "Green Vinaigrette";
       } 
 
       function harissayo() {  
          ord.dressing = "Harissa Yogurt"; 
+         document.getElementById("dressing1").value = "Harissa Yogurt";
       } 
 
       function lemon() {  
          ord.dressing = "Lemon Herb Tahini"; 
+         document.getElementById("dressing1").value = "Lemon Herb Tahini";
       } 
 
       function yodill() {  
          ord.dressing = "Yogurt Dill"; 
+         document.getElementById("dressing1").value = "Yogurt Dill";
       } 
 
       function gfries() { 
          ord.extra = "Garlic Fries"; 
+         document.getElementById("extra1").value = "GarlicFries";
       } 
 
       function twoF() { 
          ord.extra = "2 Falafels"; 
+         document.getElementById("extra1").value = "2 Falafels";
+         
       } 
 
       function pitaE() { 
          ord.extra = "Pita"; 
+         document.getElementById("extra1").value = "Pita";
       } 
 
       function fd() { 
          ord.extra = "Fountain Drink"; 
+         document.getElementById("extra1").value = "FountainDrink";
       } 
 
       function vb() { 
          ord.extra = "Vegan Box"; 
+         document.getElementById("extra1").value = "Vegan Box";
       } 
 
-      
+      function mana() { 
+         window.location.href = 'http://localhost:3000/manager';
+      } 
+
+      // Andrew stuff below ----------------------------------------------
+
+      function loadTheme(theme) {
+         var prev_theme = document.getElementsByTagName('link')[0];
+         prev_theme.setAttribute('href',theme);
+      }
+
+      function switchDefault() {
+         loadTheme("default.css");
+      }
+
+      function switchDyslexic() {
+         loadTheme("dyslexic.css");
+      }
+
+      function switchGrayscale() {
+         loadTheme("grayscale.css");
+      }
+
+      function switchContrast() {
+         loadTheme("contrast.css");
+      }
+
       function send() {
          switch(ord.extra) {
             case "Garlic Fries":
@@ -116,56 +165,68 @@
                break;
             }
       }
+   
    </script>
+
    <h1>Server POS</h1>
-        <div class = "button-container">
-            <div class = "entree">
-                <h2> Entree </h2>
-                <button id="s" onclick="grainBowl()">Grain Bowl</button>
-                <button id="s" onclick="salad()">Salad</button>
-                <button id="s" onclick="pita()">Pita</button>
-                <button id="s" onclick="greens()">Greens & Grains</button> 
-            
-            </div>
 
-            <div class = "protein">
-                <h2> Protein </h2> 
-                <button id="s" onclick="gyro()">Gyro</button>
-                <button id="s" onclick="falafel()">Falafel</button>
-                <button id="s" onclick="meatballs()">Meatballs</button>
-                <button id="s" onclick="chicken()">Chicken</button>
-                <button id="s" onclick="vegmed()">Veg Medley</button>
-            </div>
-
-            <div class = "dressing">
-                <h2> Dressing </h2>
-                <button id="s" onclick="hummus()">Hummus</button>
-                <button id="s" onclick="rphummus()">Red Pepper Hummus</button>
-                <button id="s" onclick="jalafeta()">Jalapeno Feta</button>
-                <button id="s" onclick="tza()">Tzatziki</button>
-                <button id="s" onclick="grev()">Green Vinaigrette</button>
-                <button id="s" onclick="harissayo()">Harissa Yogurt</button>
-                <button id="s" onclick="lemon()">Lemon Herb Tahini</button>
-                <button id="s" onclick="yodill()">Yogurt Dill</button> 
-            </div>
-
-            <div class = "extra">
-                <h2> Extra </h2> 
-                <button id="s" onclick="gfries()">Garlic Fries</button>
-                <button id="s" onclick="twoF()">2 Falafels</button>
-                <button id="s" onclick="pitaE()">Pita</button>
-                <button id="s" onclick="fd()">Fountain Drink</button>
-                <button id="s" onclick="vb()">Vegan Box</button>
-            </div>
-
-            <div class = "order">
-                <button id="s" onclick="send()">Order</button>
-            </div>
+   <header>
+      <a href='http://localhost:3000/'>Login</a>
+      <a href='http://localhost:3000/customer'>Customer View</a>
+      <a href='http://localhost:3000/server'>Server POS</a>
+      <a href='http://localhost:3000/manager'>Manager View</a>
+   </header>
 
 
-        </div>
-   <!-- <h1>TAs</h1>
-   <% for (var i in teammembers) {%>
-       <p>FUck: <%=teammembers[i].item%>, Shit: <%=teammembers[i].inventory%><p>
-   <% } %> -->
+      <div class = "button-container">
+         <div class = "entree">
+            <h2> Entree </h2>
+            <button id="s" onclick="grainBowl()">Grain Bowl</button>
+            <button id="s" onclick="salad()">Salad</button>
+            <button id="s" onclick="pita()">Pita</button>
+            <button id="s" onclick="greens()">Greens & Grains</button> 
+         </div>
+
+         <div class = "protein">
+            <h2> Protein </h2> 
+            <button id="s" onclick="gyro()">Gyro</button>
+            <button id="s" onclick="falafel()">Falafel</button>
+            <button id="s" onclick="meatballs()">Meatballs</button>
+            <button id="s" onclick="chicken()">Chicken</button>
+            <button id="s" onclick="vegmed()">Veg Medley</button>
+         </div>
+
+         <div class = "dressing">
+            <h2> Dressing </h2>
+            <button id="s" onclick="hummus()">Hummus</button>
+            <button id="s" onclick="rphummus()">Red Pepper Hummus</button>
+            <button id="s" onclick="jalafeta()">Jalapeno Feta</button>
+            <button id="s" onclick="tza()">Tzatziki</button>
+            <button id="s" onclick="grev()">Green Vinaigrette</button>
+            <button id="s" onclick="harissayo()">Harissa Yogurt</button>
+            <button id="s" onclick="lemon()">Lemon Herb Tahini</button>
+            <button id="s" onclick="yodill()">Yogurt Dill</button> 
+         </div>
+
+         <div class = "extra">
+            <h2> Extra </h2> 
+            <button id="s" onclick="gfries()">Garlic Fries</button>
+            <button id="s" onclick="twoF()">2 Falafels</button>
+            <button id="s" onclick="pitaE()">Pita</button>
+            <button id="s" onclick="fd()">Fountain Drink</button>
+            <button id="s" onclick="vb()">Vegan Box</button>
+         </div>
+    </div>
+
+    <form action="/" method="post">
+      <input type="text" id="base1" name="bas" placeholder="Base">
+      <input type="text" id="protein1" name="pro" placeholder="Protein">
+      <input type="text" id="dressing1" name="dre" placeholder="Dressing">
+      <input type="text" id="extra1" name="ext" placeholder="Extra">
+   </form>
+
+    <div class = "bottom">
+        <button id="order" onclick="send()">Place Order</button>
+    </div>
+  
 </body>
