--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -172,10 +172,10 @@
         <h1>Customer View</h1>
 
         <header>
-            <a href='http://localhost:3000/'>Login</a>
-            <a href='http://localhost:3000/customer'>Customer View</a>
-            <a href='http://localhost:3000/server'>Server POS</a>
-            <a href='http://localhost:3000/manager'>Manager View</a>
+            <a href='/'>Login</a>
+            <a href='/customer'>Customer View</a>
+            <a href='/server'>Server POS</a>
+            <a href='/manager'>Manager View</a>
         </header>
 
         <div class = "button-container">
