--- a/views/login.ejs
+++ b/views/login.ejs
@@ -170,10 +170,10 @@
         </script>
 
         <header>
-            <a href='http://localhost:3000/'>Login</a>
-            <a href='http://localhost:3000/customer'>Customer View</a>
-            <a href='http://localhost:3000/server'>Server POS</a>
-            <a href='http://localhost:3000/manager'>Manager View</a>
+            <a href='/'>Login</a>
+            <a href='/customer'>Customer View</a>
+            <a href='/server'>Server POS</a>
+            <a href='/manager'>Manager View</a>
         </header>
 
         <main id = "main-holder">
