--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -169,7 +169,7 @@
          
         </script>
 
-        <h1>Customer View</h1>
+        <h1>Customer View!</h1>
 
         <header>
             <a href='/'>Login</a>
