--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -132,19 +132,19 @@
             }
       
             function switchDefault() {
-               loadTheme("default.css");
+               loadTheme("\css\default.css");
             }
       
             function switchDyslexic() {
-               loadTheme("dyslexic.css");
+               loadTheme("\css\dyslexic.css");
             }
       
             function switchGrayscale() {
-               loadTheme("grayscale.css");
+               loadTheme("\css\grayscale.css");
             }
       
             function switchContrast() {
-               loadTheme("contrast.css");
+               loadTheme("\css\contrast.css");
             }
       
             function send() {
