--- a/views/user.ejs
+++ b/views/user.ejs
@@ -169,12 +169,11 @@
    </script>
 
    <h1>Server POS</h1>
-
    <header>
-      <a href='http://localhost:3000/'>Login</a>
-      <a href='http://localhost:3000/customer'>Customer View</a>
-      <a href='http://localhost:3000/server'>Server POS</a>
-      <a href='http://localhost:3000/manager'>Manager View</a>
+      <a href='/'>Login</a>
+      <a href='/customer'>Customer View</a>
+      <a href='/server'>Server POS</a>
+      <a href='/manager'>Manager View</a>
    </header>
 
 
