--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -136,7 +136,7 @@
             }
       
             function switchDyslexic() {
-               loadTheme("\css\dyslexic.css");
+               loadTheme("/css/dyslexic.css");
             }
       
             function switchGrayscale() {
@@ -150,7 +150,7 @@
             function load_style()
             {
                 
-                document.getElementById('page_style').setAttribute("href", "\css\dyslexic.css");
+                document.getElementById('page_style').setAttribute("href", "/css/dyslexic.css");
             }
       
             function send() {
