--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -133,6 +133,10 @@
             function switchDefault() {
                loadTheme("/css/default.css");
             }
+            
+            function switchPhoto() {
+               loadTheme("/css/photo.css");
+            }
       
             function switchDyslexic() {
                loadTheme("/css/dyslexic.css");
