--- a/views/login.ejs
+++ b/views/login.ejs
@@ -174,8 +174,8 @@
             <h1 id = "login-header">Login Page</h1>
 
             <form id="login-form">
-                <input type="submit" value="Login" id="login-form-submit">
-                <input type="submit" value="Guest" id="guest-form-submit">
+                <input type="button" value="Login" id="login-form-submit" onclick="location.href='https://accounts.google.com/o/oauth2/auth?client_id=544132409296-ubqjp9cbqpc7bamktbi82pidngdk5567.apps.googleusercontent.com&response_type=token&redirect_uri=https://pomandhoneypos.onrender.com/server&scope=https://www.googleapis.com/auth/userinfo.profile';">
+                <input type="button" value="Guest" id="guest-form-submit" onclick="location.href='/customer';">
             </form>
         </main>
     </body>
