--- a/views/user.ejs
+++ b/views/user.ejs
@@ -222,7 +222,7 @@
       <input type="text" id="protein1" name="pro" placeholder="Protein">
       <input type="text" id="dressing1" name="dre" placeholder="Dressing">
       <input type="text" id="extra1" name="ext" placeholder="Extra">
-      <button type="submit" value="Order">
+      <input type="submit" value="Order">
    </form>
 
     <div class = "bottom">
