--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -226,7 +226,7 @@
             </div>
         </div>
 
-        <form action="/" method="post">
+        <form action="/cust" method="post">
             <input type="text" id="base1" name="bas" placeholder="Base">
             <input type="text" id="protein1" name="pro" placeholder="Protein">
             <input type="text" id="dressing1" name="dre" placeholder="Dressing">
