--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -177,7 +177,23 @@
             }
          
         </script>
+        <p>Translate this page:</p>
+        <div id="google_translate_element"></div>
 
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement(
+				{pageLanguage: 'en'},
+				'google_translate_element'
+			);
+		}
+	</script>
+
+	<script type="text/javascript"
+			src=
+"https://translate.google.com/translate_a/element.js?
+cb=googleTranslateElementInit">
+	</script>
         <h1>Customer View!</h1>
 
         <header>
