--- a/views/customer.ejs
+++ b/views/customer.ejs
@@ -258,5 +258,15 @@ cb=googleTranslateElementInit">
             <button id="contrast" onclick="switchContrast()">High Contrast</button>
             <button id="order" onclick="send()">Place Order</button>
         </div>
+	<iframe
+            width="600"
+            height="450"
+            style="border:0"
+            loading="lazy"
+            allowfullscreen
+            referrerpolicy="no-referrer-when-downgrade"
+            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDb2QRPj2stuoa_Z0iQsH2nUa7pJxRq3wg
+            &q=Pom+Honey+MSC,College+Station+TX">
+        </iframe>
     </body>
 </html>
